--- a/quant_frontend_v1/.env.test
+++ b/quant_frontend_v1/.env.test
@@ -1,7 +1,8 @@
 ###  环境名，process.env查的是运行模式，指向到对应的.env（如果存在）
 NODE_ENV="production"
 VUE_APP_VERSION = "20240322"
-###  API - 接口地址
-VUE_APP_JUE_API = "http://localhost:8031/api"
+###  API 接口地址 VUE_APP_BASE_URL 用于配合本地代理跨域
+VUE_APP_BASE_URL = 'http://localhost:8031/api'
+# VUE_APP_JUE_API = "http://localhost:8031/api"
 ###  打包名
 VUE_APP_DIR_NAME="build_test"
