--- a/quant_frontend_v1/.env.development
+++ b/quant_frontend_v1/.env.development
@@ -1,8 +1,9 @@
 ###  环境名，process.env查的是运行模式，指向到对应的.env（如果存在）
 NODE_ENV="development"
 ###  版本号
-VUE_APP_VERSION = "20240902"
-###  API 接口地址
-VUE_APP_JUE_API = "http://localhost:8031/api"
+VUE_APP_VERSION = "20240903"
+###  API 接口地址 VUE_APP_BASE_URL 用于配合本地代理跨域
+VUE_APP_BASE_URL = 'http://localhost:8031/api'
+# VUE_APP_JUE_API = "http://localhost:8031/api"
 ###  打包名
 VUE_APP_DIR_NAME="build_dev"
