--- a/quant_frontend_v1/.env.production
+++ b/quant_frontend_v1/.env.production
@@ -2,8 +2,9 @@
 NODE_ENV="production"
 ###  版本号
 VUE_APP_VERSION = "20240322"
-###  API - 接口地址，使用生产接口
-VUE_APP_JUE_API = "http://localhost:8031/api"
+###  API 接口地址 VUE_APP_BASE_URL 用于配合本地代理跨域
+VUE_APP_BASE_URL = 'http://localhost:8031/api'
+# VUE_APP_JUE_API = "http://localhost:8031/api"
 ###  打包名
 VUE_APP_DIR_NAME="build_prod"
 
