--- a/quant_frontend_v1/package.json
+++ b/quant_frontend_v1/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "echarts": "^5.5.1",
     "element-plus": "^2.8.1",
     "vconsole": "^3.15.1",
     "vue": "^3.2.13",
