--- a/quant_frontend_v1/package.json
+++ b/quant_frontend_v1/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.8.1",
     "vconsole": "^3.15.1",
     "vue": "^3.2.13",
+    "vue-count-to": "^1.0.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
