--- a/quant_frontend_v1/package.json
+++ b/quant_frontend_v1/package.json
@@ -8,14 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.2",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "echarts": "^5.5.1",
     "element-plus": "^2.8.1",
     "vconsole": "^3.15.1",
     "vue": "^3.2.13",
-    "vue-count-to": "^1.0.13",
     "vue-router": "^4.0.3",
+    "vue3-count-to": "^1.1.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
